--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,9 @@
       href="https://fonts.googleapis.com/css?family=Lobster"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>
+      PixFinder
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
