--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Shrikhand"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css?family=Lobster"
       rel="stylesheet"
     />
